[package]
name = "frontier-template-node"
version = "0.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/frontier-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
structopt = "0.3.8"
async-trait = "0.1"
jsonrpc-pubsub = "15.0.0"
futures = "0.3"
log = "0.4.8"

sc-cli = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length", features = ["wasmtime"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-executor = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length", features = ["wasmtime"] }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length", features = ["wasmtime"] }
sc-telemetry = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-network = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.0.0"
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }

fc-consensus = { path = "../../client/consensus" }
fp-consensus = { path = "../../primitives/consensus" }
frontier-template-runtime = { path = "../runtime", default-features = false, features = ["std"] }
fc-rpc = { path = "../../client/rpc" }
fp-rpc = { path = "../../primitives/rpc" }
fc-rpc-core = { path = "../../client/rpc-core" }
fc-db = { path = "../../client/db" }
fc-mapping-sync = { path = "../../client/mapping-sync" }

pallet-evm = { path = "../../frame/evm" }
pallet-ethereum = { path = "../../frame/ethereum" }
pallet-dynamic-fee = { path = "../../frame/dynamic-fee" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "crystalin-v0.9.9-block-response-length" }

[features]
default = ["aura"]
aura = ["frontier-template-runtime/aura"]
manual-seal = ["frontier-template-runtime/manual-seal"]
runtime-benchmarks = [
	"frontier-template-runtime/runtime-benchmarks",
]
