[package]
name = "pallet-evm-precompile-dispatch"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "DISPATCH precompiles for EVM pallet."

[dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-evm = { default-features = false, path = "../.." }
fp-evm = { version = "0.8.0", default-features = false, path = "../../../../primitives/evm" }
evm = { git = "https://github.com/joshorndorff/evm.git", branch = "joshy-update", default-features = false, features = ["with-codec"] }
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }

[features]
default = ["std"]
std = [
	"sp-core/std",
	"sp-io/std",
	"frame-support/std",
	"pallet-evm/std",
	"fp-evm/std",
	"evm/std",
	"codec/std",
]
